[FIX] overflow wrap added to performances

--- a/resources/scss/partials/_show.scss
+++ b/resources/scss/partials/_show.scss
@@ -47,6 +47,10 @@
 
 .performances {
     font-size: 14px;
+    word-wrap: break-word;
+    white-space: normal;
+    overflow-wrap: break-word;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 767px) {
